--- a/src/app/wikipedia-search/wikipedia-search.component.html
+++ b/src/app/wikipedia-search/wikipedia-search.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form [formGroup]="searchForm" class="col-lg-4 offset-lg-4 col-md-6 offset-md-3 box" novalidate>
+    <form [formGroup]="searchForm" class="col-lg-4 offset-lg-4 col-md-6 offset-md-3 box">
         <h4>Wikipedia Search</h4>
         <div class="row">
             <div class="col-md-12 form-group">
@@ -14,6 +14,6 @@
     <div class="loading" *ngIf="isLoading">Loading</div>
     <div class="col-md-12" *ngIf="!isLoading">
         <h3>{{title}}</h3>
-        <div [innerHTML]="results"></div>
+        <div *ngIf="results" class="fetchdata" [innerHTML]="results"></div>
     </div>
 </div>
